--- a/style.css
+++ b/style.css
@@ -49,8 +49,14 @@ body {
   letter-spacing: 3px;
 }
 .divider {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+.divider img {
+  width: 98%;
 }
 .mobile {
   display: none;
@@ -59,7 +65,6 @@ body {
   display: flex;
   justify-content: center;
   margin-top: -30px;
-  margin-left: 10px;
 }
 .btn_dice :hover {
   color: #fff;
